--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "to-do",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://magdalenapietruszewska.github.io/ToDoList/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.0",
-    "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
@@ -35,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
